navbar focused links are not readable (fixes #156)

--- a/src/Dashboard/Content/Site.css
+++ b/src/Dashboard/Content/Site.css
@@ -23,7 +23,8 @@
     color: white;
 }
 
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-nav > li > a:hover {
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-brand:focus, .navbar-default .navbar-nav > li > a:focus {
     background-color: #526273;
     color: white;
 }
